--- a/Day1/app/src/main/AndroidManifest.xml
+++ b/Day1/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         </activity>
         <activity
             android:name=".FirstActivity"
+            android:launchMode="singleTop"
             android:exported="true"
             android:label="This is FirstActivity">
             <intent-filter>
