--- a/Day1/app/src/main/AndroidManifest.xml
+++ b/Day1/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity
             android:name=".SecondActivity"
+            android:launchMode="singleInstance"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.example.android_demo.ACTION_START" />
@@ -34,7 +35,7 @@
         </activity>
         <activity
             android:name=".FirstActivity"
-            android:launchMode="singleTop"
+            android:launchMode="singleTask"
             android:exported="true"
             android:label="This is FirstActivity">
             <intent-filter>
